<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubjectActivity">

    <!-- Subject RecyclerView. -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subject_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

    <!-- "Add Subject" FloatingActionButton. -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_subject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_subject"
        android:onClick="addSubjectClick"
        android:src="@drawable/add" />

</FrameLayout>