<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview1"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true">

    <!-- Subject TextView. -->
    <TextView
        android:id="@+id/subject_text_view"
        style="@style/CardLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp" />

</androidx.cardview.widget.CardView>