...
    <string name="update">Update</string>
    <string name="save_question">Save Question</string>
    <string name="add_subject">Add Subject</string>
    <string name="question_deleted">Question deleted.</string>
    <string name="question_added">Question added.</string>
    <string name="question_updated">Question updated.</string>
    <string name="create">Create</string>
    <string name="subject">New subject?</string>
    <string name="cancel">Cancel</string>
    <string name="update_question">Update Question</string>
    <string name="add_question">Add Question</string>
    <string name="no_questions">No questions exist for this subject.</string>
    <string name="subject_exists">The subject "%1$s" already exists.</string>
...
